AFS_Dev/src/objects/Approved_B_P__c.object
<CustomObject>
    <fields>
        <fullName>Approved_B_P__c</fullName>
        <label>Approved B&amp;P</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approver_Level__c</fullName>
        <label>Approver Level</label>
        <picklist>
            <picklistValues>
                <fullName>AFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portfolio</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <picklist>
            <picklistValues>
                <fullName>FY14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY17</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Approved B&amp;P</relationshipLabel>
        <relationshipName>Approved_B_P</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <picklist>
            <picklistValues>
                <fullName>Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Approved B&amp;P</label>
    <nameField>
        <displayFormat>ABP- {0000000000}</displayFormat>
        <label>Approved B&amp;P Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approved B&amp;P</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>